--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,44 @@ li {
   list-style: none;
   margin: 10px;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  justify-content: space-between;
+}
+
+
+
+
+#top-navbar {
+  position: relative;
+  font-size: 1.1em;
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
+  margin-left: 40px;
+  justify-content: space-between;
+}
+
+/* Line under links */
+#top-navbar::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background: red;
+  border-radius: 5px;
+  left: 0;
+  bottom: -6px;
+  transform: scaleX(0);
+  transition: transform .5s;
+  transform-origin: right;
+}
+
+#top-navbar:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
